[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Grid.gd" type="Script" id=2]
[ext_resource path="res://Assets/Background.png" type="Texture" id=3]
[ext_resource path="res://Assets/top-ui.png" type="Texture" id=4]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 720.0
margin_bottom = 1280.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grid" type="Node2D" parent="."]
script = ExtResource( 2 )
width = 8
height = 15
x_start = 80
y_start = 80
offset = 80
y_offset = 3

[node name="DestroyTimer" type="Timer" parent="Grid"]
wait_time = 0.2
one_shot = true

[node name="CollapseTimer" type="Timer" parent="Grid"]
wait_time = 0.2
one_shot = true

[node name="RefillTimer" type="Timer" parent="Grid"]
wait_time = 0.2
one_shot = true

[node name="TopUI" type="TextureRect" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="Grid/DestroyTimer" to="Grid" method="_on_DestroyTimer_timeout"]
[connection signal="timeout" from="Grid/CollapseTimer" to="Grid" method="_on_CollapseTimer_timeout"]
[connection signal="timeout" from="Grid/RefillTimer" to="Grid" method="_on_RefillTimer_timeout"]
